# AIGameDevCollecter

./: .gitignore  README.md  pyproject.toml
src/survey/: association.py  badcase.py  bench_testcases.py  branch.py  cli.py  config.py  git_ops.py  hooks.py  inference.py  metrics.py  models.py  report.py  storage.py  transcripts.py
src/survey/adapters/: __init__.py  base.py  claude_code.py  codex.py  git_diff.py
src/survey/validation/: __init__.py  conventions.py  l0.py  l1.py
tests/: conftest.py  test_association.py  test_badcase.py  test_branch.py  test_claude_code_adapter.py  test_cli.py  test_codex_adapter.py  test_config.py  test_conventions.py  test_git_diff_adapter.py  test_git_ops.py  test_hooks.py  test_inference.py  test_l0.py  test_l1.py  test_metrics.py  test_models.py  test_report.py
tests/fixtures/: claude_code_transcript.jsonl  codex_transcript.jsonl  survey.toml
tests/fixtures/godot_project/: project.godot
tests/fixtures/godot_project/scenes/: enemy.tscn
tests/fixtures/godot_project/scripts/: enemy_patrol.gd
