[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aigamedevcollecter"
version = "0.1.0"
description = "Passive collector that records AI game-dev sessions and flags bad cases"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
survey = "survey.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
